[package]
name = "ascifuner"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
base64 = "0.13.1"
image = { version = "0.24.5", default-features = false, features = ["png", "jpeg", "webp"] }
serde = { version = "1.0.148", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = "0.2"
